<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <CheckBoxPreference
        android:key="pref_https"
        android:title="@string/pref_https"
        android:defaultValue="true" />
    
    <EditTextPreference
        android:key="pref_host"
        android:title="@string/pref_host"
        android:dialogTitle="@string/pref_host"
        android:summary="Internet host to connect to"
        android:defaultValue="@string/pref_host_default" />

    <EditTextPreference
        android:key="pref_url"
        android:title="@string/pref_url"
        android:dialogTitle="@string/pref_url"
        android:summary="The URL used to search for the user name"
        android:defaultValue="@string/pref_url_default" />
    
    <EditTextPreference
        android:key="pref_userName"
        android:title="@string/pref_userName"
        android:dialogTitle="@string/pref_userName" 
        android:summary="User name to connect with"/>

    <EditTextPreference
        android:key="pref_password"
        android:title="@string/pref_password"
        android:dialogTitle="@string/pref_password" 
        android:summary="Password used to connect"/>
        
</PreferenceScreen>
